--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,7 +6,7 @@
 body {
   font-family: "Roboto", sans-serif;
   margin: 0;
-  background: linear-gradient(70deg, rgb(248, 213, 149), rgb(155, 132, 90));
+  background: linear-gradient(70deg, rgb(251, 222, 162), rgb(252, 204, 212));
   position: relative;
   padding-bottom: 7rem;
   min-height: 100vh;
@@ -19,7 +19,7 @@ header {
   justify-content: space-between;
   padding: 1rem;
   font-size: 2rem;
-  background-color: rgb(155, 132, 90);
+  background: linear-gradient(70deg, rgb(251, 222, 162), rgb(252, 204, 212));
 }
 
 .logo__header {
@@ -69,8 +69,8 @@ header {
 
 /* Estilos del footer */
 
-footer {
-  background-color: rgb(155, 132, 90);
+.pie {
+  background: linear-gradient(70deg, rgb(251, 222, 162), rgb(252, 204, 212));
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -80,11 +80,11 @@ footer {
   width: 100%;
 }
 
-footer h3 {
+.pie h3 {
   font-size: 2rem;
 }
 
-footer i {
+.pie i {
   color: rgb(49, 49, 49);
   font-size: 2rem;
 }
@@ -149,7 +149,7 @@ footer i {
   font-size: 2rem;
 }
 
-/* --- @MEDIAS QUERIS :) 425 y 768 --- */
+/* --- @MEDIAS QUERIS :) 425 , 768 y 1024--- */
 
 @media (max-width: 425px) {
   /* Estilos del header */
@@ -186,15 +186,15 @@ footer i {
   }
 
   /* Estilos del footer */
-  footer {
+  .pie {
     text-align: center;
   }
 
-  footer h3 {
+  .pie h3 {
     font-size: 1rem;
   }
 
-  footer i {
+  .pie i {
     font-size: 1rem;
   }
 
@@ -237,8 +237,12 @@ footer i {
     display: none;
   }
 
-  /* Estilos de la tienda */
-  header {
-    font-size: 1rem;
+  /* Estilos del header */
+  header{
+   align-items: center;
+ }
+@media (max-width: 1024px) {
+  .logo__header {
+    font-size: 1.5rem;
   }
 }
